# lcfall-ros2

./: .gitignore  CONFIRMATION_CHECKLIST.md  Dockerfile  README.md  compose.yaml  create_dummy_background.py  lcfall_ros2_design_final.md  run_capture_background.sh  run_fall_detection.sh  test_dummy_publisher.py  test_raw_publisher.py
config/livox/: MID360_config.json
docker/: compose_with_video_devices.sh  entrypoint.sh  run_app.sh  run_background_capture.sh
offline/: fusionmodel.py  model.py  slowonly_r50_unified_fold1.py
src/lcfall_msgs/: CMakeLists.txt  package.xml
src/lcfall_msgs/msg/: FallDetectionResult.msg  PreprocessedFrame.msg
src/lcfall_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/lcfall_ros2/config/: params.yaml  slowonly_r50_inference.py
src/lcfall_ros2/launch/: capture_background.launch.py  demo.launch.py  lcfall.launch.py
src/lcfall_ros2/lcfall_ros2/: __init__.py  alert_node.py  camera_inference_node.py  capture_background.py  device_recovery.py  inference_node.py  lidar_inference_node.py  sync_preprocess_node.py  visualization_node.py
src/lcfall_ros2/lcfall_ros2/models/: __init__.py  fusion_model.py  lidar_model.py
src/lcfall_ros2/lcfall_ros2/utils/: __init__.py  background_subtraction.py  heatmap_generation.py  lidar_preprocessing.py  ring_buffer.py  skeleton_extraction.py  tensor_utils.py
